# swmm-python

./: .coveralls.yml.enc  .gitignore  .gitmodules  ACKNOWLEDGMENTS  CITATION.cff  CONTRIBUTORS  LICENSE.md  README.md  README.rst  appveyor.yml  before_build.bat  setup.py  tox.ini
.github/: build-wheel.sh  build-wheels.sh
.github/workflows/: build_wheel.yml  conda-test.yml  python-package-linux.yml  python-package.yml  unit_test.yml  wheel_build.yml
nrtest-swmm/: ACKNOWLEDGMENTS  CONTRIBUTORS  LICENSE.md  README.md  main.py  setup.py
nrtest-swmm/nrtest_swmm/: __init__.py  output_reader.py
nrtest-swmm/scripts/: report-diff
output/: requirements.txt  setup.py
output/swmm/output/: __init__.py  output.i
output/tests/: test_output.py
output/tests/data/: __init__.py
swmm/: toolkit.i
swmm-output/: setup.py
swmm-output/swmm/output/: __init__.py  output.i
swmm-output/tests/: test_output.py
swmm-toolkit/: ACKNOWLEDGMENTS  AUTHORS  CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  build-requirements.txt  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
swmm-toolkit/docs/: conf.py  index.rst
swmm-toolkit/docs/apidoc/: swmm.rst  swmm.toolkit.output.rst  swmm.toolkit.rst  swmm.toolkit.shared_enum.rst  swmm.toolkit.solver.rst
swmm-toolkit/src/: swmm_toolkit.i
swmm-toolkit/src/swmm/toolkit/: CMakeLists.txt  __init__.py  output.i  output_docs.i  output_enum.py  output_metadata.py  output_rename.i  shared_enum.py  solver.i  solver_docs.i  solver_enum.py  solver_rename.i  solver_toolkitapi_rename.i  stats_typemaps.i  swig_headers.i  swmm_enum.py  toolkit_enum.py
swmm-toolkit/swmm/output/: CMakeLists.txt  __init__.py  output.i
swmm-toolkit/swmm/solver/: CMakeLists.txt  __init__.py
swmm-toolkit/swmm/toolkit/: toolkit.i
swmm-toolkit/tests/: test_metadata.py  test_output.py  test_series.py  test_solver.py  test_stats.py  test_wrappers.py
swmm-toolkit/tests/data/: test_Example1.inp  test_Example2.inp  test_Example3.inp  test_Söderhamn.inp
swmm-toolkit/tools/: build-wheels.sh  install-swig.sh  relocate.sh  relocate.zsh  repair_wheels.sh
swmm-toolkit/wrappers/: utils.py
swmm/tests/: test_base_api.py
swmm_python/output/: setup.py
swmm_python/output/swmm/output/: __init__.py  output.i
swmm_python/output/tests/: test_output.py
swmm_python/toolkit/: setup.py
swmm_python/toolkit/swmm/toolkit/: __init__.py
tests/: test_integrated.py
toolkit/: requirements.txt  setup.py  toolkit.i
toolkit/swmm/toolkit/: __init__.py  toolkit.i
toolkit/tests/: test_toolkit.py
toolkit/tests/data/: __init__.py
