[build-system]
requires = ["swig>=4.4.0", "scikit-build-core>=0.4.3"]
build-backend = "scikit_build_core.build"

[project]
name = "swmm-toolkit"
version = "0.16.2"
description = "PySWMM SWMM Python Toolkit"
readme = { file = "README.md", content-type = "text/markdown" }
license = "CC0-1.0 AND (MIT OR Apache-2.0)"
license-files = ["LICEN[CS]E*", "AUTHORS", "extern/openmp.LICENSE"]
authors = [{ name = "See AUTHORS" }]
maintainers = [{ email = "bemcdonnell@gmail.com" }]
keywords = ["swmm5", "swmm", "stormwater", "hydraulics", "hydrology"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.9"
dependencies = ["aenum>=3.1.11"]
urls = { Homepage = "https://github.com/pyswmm/swmm-python" }

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.args = ["-GVisual Studio 17 2022"]

[[tool.scikit-build.overrides]]
if.platform-system = "darwin"
cmake.args = ["-GXcode", "-DCMAKE_OSX_DEPLOYMENT_TARGET:STRING=11.0"]

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
cmake.args = ["-GUnix Makefiles"]

[tool.scikit-build.wheel]
packages = ["src/swmm/toolkit"]
py-api = "cp39"
exclude = [
    "**/*runswmm*",
    "**/*.exe",
    "**/*.cmake",
    "**/*.h",
    "**/*.lib",
    "**/*.i",
    "**/CMakeLists.txt",
    "toolkit/*",
    "lib/*",
    "bin/*",
    "build-env/*",
]

[[tool.scikit-build.overrides]]
if.env.NO_STABLE_ABI = true
wheel.py-api = ""

[tool.scikit-build.sdist]
exclude = ["build-env/*"]
